# TradingAgents

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.web  OPERATIONS.md  README.md  config.py  docker-compose.yml  main.py  pipeline.py  pyproject.toml  run.bat  run.sh
cli/: main.py  models.py  utils.py
gui/: DEPLOY.md  README.md  __init__.py  app.py  brief.py  charts.py  chat.py  config.py  export.py  launcher.py  log_browser.py  md_utils.py  runner.py  runner_worker.py  storage.py
gui/pages/: 1_Run.py  2_History.py  3_Notes.py  4_Memory.py  5_Settings.py
screener/: finviz_filter.py  markdown_writer.py  queue_manager.py
scripts/nas/: README.md  credentials.local.example  deploy.sh  logs.sh  nas-cmd.sh  restart.sh  rollback.sh  status.sh  upgrade.sh
service/: __init__.py  app.py  planner_client.py  runner_pool.py  schemas.py  streaming.py
service/routers/: __init__.py  briefs.py  calendar.py  charts.py  chat.py  exports.py  memory.py  news_feed.py  notes.py  planner.py  portfolio.py  runs.py  settings.py  simulation.py  streaming.py  watchlist.py
templates/synology-webapp-deploy/: PROMPT.md  README.md  synology-deploy.env.example
tests/: conftest.py  test_alpha_vantage_indicator.py  test_alpha_vantage_timeout.py  test_api_key_env.py  test_batch.py  test_capabilities.py  test_checkpoint_resume.py  test_cli_llm_config.py  test_conditional_logic.py  test_congress_trades.py  test_dataflow_config_isolation.py  test_dataflow_utils.py  test_dataflow_vendor_routing.py  test_deepseek_reasoning.py  test_docker_config.py  test_earnings_transcript.py  test_etf_holdings.py  test_etf_peer_compare.py  test_fallback_chat_model.py  test_formatting.py  test_graph_checkpoint.py  test_graph_config.py  test_gui_custom_backend.py  test_gui_error_logging.py  test_gui_export.py  test_lambda_finance_compare.py  test_lambda_finance_sec.py  test_macro_data.py  test_markdown_writer.py  test_memory_log.py  test_minimax.py  test_ollama_base_url.py  test_openai_retry_default.py  test_options_flow.py  test_per_role_llms.py  test_pipeline_cli.py  test_portfolio_api.py  test_quality_guard.py  test_queue_manager.py  test_researcher_debate_state.py  (+10 more)
tradingagents/: __init__.py  allocation.py  batch.py  default_config.py  formatting.py
tradingagents/agents/: __init__.py
tradingagents/graph/: setup.py  (+4 more)
web/: next-env.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+91 files in other folders)
