[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.4"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "markdown-it-py>=3.0.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.36.0",
    "markdown>=3.5",
]
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "markdown>=3.5",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "types-python-dateutil>=2.9.0.20241206",
    "types-requests>=2.32.0",
]

[project.scripts]
tradingagents = "cli.main:app"
tradingagents-gui = "gui.launcher:main"
tradingagents-api = "service.app:main"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*", "gui*", "service*"]

[tool.setuptools.package-data]
cli = ["static/*"]
tradingagents = ["agents/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -p no:cacheprovider"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
exclude = "^(build|dist|\\.venv|tradingagents/(Lib|Scripts|Include))/"
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = [
    "langgraph.checkpoint.sqlite",
    "questionary.*",
    "stockstats.*",
    "yfinance.*",
]
ignore_missing_imports = true
